# tempo

./: manual.txt
IMU_ESP32_080426_stable_startup(1)/IMU_ESP32_080426/: CHANGES_STARTUP_STABILITY.md  CMakeLists.txt  sdkconfig
IMU_ESP32_080426_stable_startup(1)/IMU_ESP32_080426/main/: CMakeLists.txt  application.cpp  application.h  button_io0.c  button_io0.h  docs.txt  main.c
IMU_ESP32_080426_stable_startup(1)/IMU_ESP32_080426/main/imu_process/: AppTracking.cpp  AppTracking.h  IMUWrapper.cpp  IMUWrapper.h  KinematicsEngine.cpp  KinematicsEngine.h  MadgwickFilter.cpp  MadgwickFilter.h  SensorQMI8658.cpp  SensorQMI8658.h  SimpleKalmanFilter.cpp  SimpleKalmanFilter.h  TrackingConfig.h  config.h
IMU_ESP32_080426_stable_startup(1)/IMU_ESP32_080426/main/ui/: readme.txt  ui.c  ui.h
IMU_ESP32_080426_stable_startup(1)/IMU_ESP32_080426/main/ui/components/: ui_header.c  ui_header.h
IMU_ESP32_080426_stable_startup(1)/IMU_ESP32_080426/main/ui/fonts/: ui_font_Font100.c  ui_font_Font130.c  ui_font_Font72Bold.c
IMU_ESP32_080426_stable_startup(1)/IMU_ESP32_080426/main/ui/screens/: screen_loading.c  screen_loading.h  screen_main.c  screen_main.h  screen_mode.c  screen_mode.h  screen_personal.c  screen_personal.h  screen_select.c  screen_select.h  screen_team.c  screen_team.h
K-ICM-20948/: .cproject  .project  K-ICM-20948 Debug.launch  K-ICM-20948.ioc
K-ICM-20948/Core/Inc/: AK09916.h  angle.h  (+4 more)
K-ICM-20948/Debug/: K-ICM-20948.elf  K-ICM-20948.list  K-ICM-20948.map  makefile  objects.list
K-ICM-20948/Release/: K-ICM-20948.elf  K-ICM-20948.list  K-ICM-20948.map  makefile
(+53 files in other folders)
